# betting_game

./: .gitignore  Cargo.toml  readme.md
migration/src/: m20220101_000001_create_table.rs
src/: crud.rs  main.rs
src/entity/src/: bet.rs  bets.rs  mod.rs  participants.rs  player.rs  prelude.rs
