[package]
name = "betting_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
axum = "0.5.16"
dotenv = "0.15.0"
rand = "0.8.5"
# sea-orm = "0.9.3"
sea-orm = { version = "0.9.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
